fix block in trustvox